# miniDataBase

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  test
include/: operation.h  query.h  utils.h
src/: main.cpp
